--- a/DRIVE/views/register.ejs
+++ b/DRIVE/views/register.ejs
@@ -12,14 +12,14 @@
 <body class="bg-gray-100 dark:bg-gray-800 h-screen w-screen flex items-center justify-center">
 
 
-    <form class="w-96" accept="/register" method="/post">
+    <form class="w-96" accept="/user/register" method="post">
 
         <div>
             <label for="first_name"
                 class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Username</label>
             <input type="text" id="first_name"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                placeholder="John" name="Username" required />
+                placeholder="John" name="username" required />
         </div>
 
         <div class="mb-6">
